<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocialAlarm</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="app_id">518957324847320</string>
    <string name="title_activity_login">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    // Welcome Screen    <string name="social_alarm_is">Social Alarm™ replace boring repetitive alarm clock with fresh information from the cloud. To do that, we will need you to</string>
    <string name="we_will_never">We will not post to your timeline, unless you ask us to.</string>
    // Greeting Selection Screen    <string name="select_a_greeting">First, select how you like to be addressed</string>
    <string name="greeting_1">Good morning, %s. </string>
    <string name="greeting_2">Hello, %s, and, again, welcome to the Aperture Science computer-aided enrichment center. </string>
    <string name="greeting_3">I\'m sorry, %s. This mission is too important for me to allow you to jeopardize it. </string>
    <string name="next">Next</string>
    // Alarm Setup    <string name="all_that_is_left">Now all that is left is pick a time for your alarm</string>
    <string name="test_the_alarm">Test the alarm</string>
    <string name="save">Save</string>
    <string name="stop">Stop</string>

    <!-- Phrase describing a time duration using seconds [CHAR LIMIT=16] -->
    <plurals name="duration_seconds">
        <item quantity="one">1 second</item>
        <item quantity="other">%d seconds</item>
    </plurals>
    <!-- Phrase describing a time duration using minutes [CHAR LIMIT=16] -->
    <plurals name="duration_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <!-- Phrase describing a time duration using hours [CHAR LIMIT=16] -->
    <plurals name="duration_hours">
        <item quantity="one">1 hour</item>
        <item quantity="other">%d hours</item>
    </plurals>

    <string name="title_activity_alarm">AlarmActivity</string>

    // Alarm Screen
    <string name="snooze">Snooze for %d minutes</string>
    <string name="close">Turn off</string>
   <string name="backup_speech">Once more unto the breach, dear friends, once more;

Or close the wall up with our English dead.

In peace there’s nothing so becomes a man

As modest stillness and humility:

But when the blast of war blows in our ears,

Then imitate the action of the tiger;

Stiffen the sinews, summon up the blood,

Disguise fair nature with hard-favour’d rage</string>

</resources>
