<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/amber"
    android:orientation="vertical"
    tools:context="com.cashlo.socialalarm.activity.AlarmActivity">

    <TextView
        android:id="@+id/greeting_title"
        android:text="@string/greeting_2"
        style="@style/text_view_style"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/snooze"
        android:text="@string/snooze"
        style="@style/text_view_style"
        android:background="@color/orange"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/close"
        android:text="@string/close"
        style="@style/text_view_style"
        android:background="@color/light_green"
        android:gravity="center"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
