<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/amber"
    android:orientation="vertical"
    tools:context=".WelcomeActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_view_style"
        android:text="@string/all_that_is_left"/>

    <TimePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alarm_time_picker"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/alarm_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_the_alarm"
            android:padding="20dp"
            android:gravity="center"
            style="@style/text_view_style"
            />
        <ProgressBar
            android:id="@+id/alarm_test_loading"
            style="@android:style/Widget.ProgressBar.Small"
            android:visibility="invisible"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </ProgressBar>

        </LinearLayout>

    <TextView
        android:id="@+id/alarm_test_stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:padding="20dp"
        android:gravity="center"
        android:visibility="invisible"
        style="@style/text_view_style"
        />





    <TextView
        android:id="@+id/save_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:padding="20dp"
        android:gravity="center"
        style="@style/text_view_style"
        />

</LinearLayout>
